# sacvpn-desktop

./: .env.example  .gitignore  ARCHITECTURE.md  PRODUCTION_ROADMAP.md  PUBLISHING_UPDATES.md  README.md  generate-icons.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/vpn/: mod.rs  wireguard.rs
src/components/: AccountPanel.tsx  ConnectionPanel.tsx  ManualConfig.tsx  ServerList.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  UpdateNotification.tsx
src/lib/: supabase.ts
src/services/: api.ts  tauri.ts  updater.ts  wireguard.ts
src/stores/: authStore.ts  vpnStore.ts
