[package]
name = "sacvpn-desktop"
version = "1.0.7"
description = "SACVPN Desktop Client - Premium VPN for Windows and macOS"
authors = ["Stephen's Code"]
license = "MIT"
repository = "https://github.com/kstephens0331/sacvpn-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = "3"
base64 = "0.22"
rand = "0.8"
x25519-dalek = "2"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
futures = "0.3"
hostname = "0.4"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
